tests/spec/emit/snapshots/let_map_over_a_function_of_its_own_name_keeps_a_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn items() -> Slice<int> { [1, 2, 3] }
  
  fn three() -> int {
    let items = items().filter(|x| x > 1)
    items.length()
  }
---
package main

func items() []int {
	return []int{1, 2, 3}
}

func three() int {
	var result []int
	for _, x := range items() {
		if x > 1 {
			result = append(result, x)
		}
	}
	items_1 := result
	return len(items_1)
}
