tests/spec/emit/snapshots/let_match_with_non_diverging_err_arm_keeps_declaration.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn test(text: string) -> int {
    let parsed = match strconv.Atoi(text) {
      Ok(n) => n,
      Err(e) => -1,
    }
    parsed
  }
---
package main

import "strconv"

func test(text string) int {
	var parsed int
	if n, err := strconv.Atoi(text); err == nil {
		parsed = n
	} else {
		parsed = -1
	}
	return parsed
}
