tests/spec/emit/snapshots/let_named_like_its_ok_binding_fuses.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    let bytes = match os.ReadFile("tasks.json") {
      Ok(bytes) => bytes,
      Err(err) => {
        fmt.Println(err)
        return
      },
    }
    fmt.Println(bytes.length())
  }
---
package main

import (
	"fmt"
	"os"
)

func main() {
	bytes, err := os.ReadFile("tasks.json")
	if err != nil {
		fmt.Println(err)
		return
	}
	fmt.Println(len(bytes))
}
