tests/spec/emit/snapshots/let_named_like_its_ok_binding_keeps_an_inner_let_apart.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    let bytes = match os.ReadFile("tasks.json") {
      Ok(bytes) => bytes,
      Err(err) => {
        let bytes = err.Error().bytes()
        fmt.Println(bytes.length())
        return
      },
    }
    fmt.Println(bytes.length())
  }
---
package main

import (
	"fmt"
	"os"
)

func main() {
	bytes, err := os.ReadFile("tasks.json")
	if err != nil {
		bytes_1 := []byte(err.Error())
		fmt.Println(len(bytes_1))
		return
	}
	fmt.Println(len(bytes))
}
